gio/gdbusauth.c
@@ -961,7 +961,6 @@ _g_dbus_auth_run_server (GDBusAuth              *auth,
   GDataInputStream *dis;
   GDataOutputStream *dos;
   GError *local_error;
-  guchar byte;
   gchar *line;
   gsize line_length;
   GDBusAuthMechanism *mech;
@@ -997,7 +996,7 @@ _g_dbus_auth_run_server (GDBusAuth              *auth,
 
   g_data_input_stream_set_newline_type (dis, G_DATA_STREAM_NEWLINE_TYPE_CR_LF);
 
-  /* first read the NUL-byte (TODO: read credentials if using a unix domain socket) */
+  /* first read the NUL-byte */
 #ifdef G_OS_UNIX
   if (G_IS_UNIX_CONNECTION (auth->priv->stream))
     {
@@ -1014,8 +1013,7 @@ _g_dbus_auth_run_server (GDBusAuth              *auth,
   else
     {
       local_error = NULL;
-      byte = g_data_input_stream_read_byte (dis, cancellable, &local_error);
-      byte = byte; /* To avoid -Wunused-but-set-variable */
+      (void)g_data_input_stream_read_byte (dis, cancellable, &local_error);
       if (local_error != NULL)
         {
           g_propagate_error (error, local_error);
@@ -1024,8 +1022,7 @@ _g_dbus_auth_run_server (GDBusAuth              *auth,
     }
 #else
   local_error = NULL;
-  byte = g_data_input_stream_read_byte (dis, cancellable, &local_error);
-  byte = byte; /* To avoid -Wunused-but-set-variable */
+  (void)g_data_input_stream_read_byte (dis, cancellable, &local_error);
   if (local_error != NULL)
     {
       g_propagate_error (error, local_error);
