gio/tests/httpd.c
@@ -67,12 +67,19 @@ handler (GThreadedSocketService *service,
 
   version = NULL;
   tmp = strchr (escaped, ' ');
-  if (tmp != NULL)
+  if (tmp == NULL)
     {
-      *tmp = 0;
-      version = tmp + 1;
+      send_error (out, 400, "Bad Request");
+      goto out;
     }
-  version = version; /* To avoid -Wunused-but-set-variable */
+  *tmp = 0;
+
+  version = tmp + 1;
+  if (!g_str_has_prefix (version, "HTTP/1."))
+    {
+      send_error(out, 505, "HTTP Version Not Supported");
+      goto out;
+    }
 
   query = strchr (escaped, '?');
   if (query != NULL)
